// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`obojobo lib utils searchNodeModulesForOboNodes attempts to load all yarn packages 1`] = `
Array [
  "obojobo-chunks-action-button",
  "obojobo-modules-module",
  "obojobo-pages-page",
  "obojobo-sections-content",
]
`;

exports[`obojobo lib utils searchNodeModulesForOboNodes omits modules defined in OBO_DISABLE_NODES 1`] = `
Array [
  "obojobo-chunks-action-button",
  "obojobo-sections-content",
]
`;
